fix alignment

--- a/assets/section-email-signup-banner.css
+++ b/assets/section-email-signup-banner.css
@@ -1,4 +1,5 @@
-.email-signup-banner .newsletter-form {
+.email-signup-banner .newsletter-form,
+.email-signup-banner .newsletter-form__field-wrapper {
   display: inline-block;
 }
 
